# DoRobotTest

./: ._.pytest_cache  ._CLAUDE.md  .gitignore  CLAUDE.md  LICENSE  README.md  fusion_result.json  lerobot_on_ascend.patch  pyproject.toml  train.py
docs/: ASYNC_SAVE_IMPLEMENTATION.md  DESIGN_UX_IMPROVEMENTS.md  RELEASE.md  TESTING_GUIDE.md  ascend_ffmpeg_install.md  offload_cloud.md
operating_platform/config/: default.py  eval.py  parser.py  policies.py  train.py
operating_platform/core/: async_episode_saver.py  cloud_train.py  daemon.py  eval.py  inference.py  main.py  record.py  replay.py  train.py
operating_platform/dataset/: dorobot_dataset.py  factory.py  image_writer.py
operating_platform/dataset/visual/: visual_dataset.py
operating_platform/envs/: configs.py  factory.py  utils.py
operating_platform/optim/: factory.py  optimizers.py  schedulers.py
operating_platform/policy/: __init__.py  factory.py  normalize.py  pretrained.py
operating_platform/policy/act/: configuration_act.py  modeling_act.py
operating_platform/policy/diffusion/: configuration_diffusion.py  modeling_diffusion.py
operating_platform/policy/tdmpc/: configuration_tdmpc.py  modeling_tdmpc.py
operating_platform/robot/components/arm_normal_so101_v1/: dora_calibrate_follower2.yml  dora_calibrate_leader2.yml  dora_read_arm_follower2.yml  dora_read_arm_leader2.yml  dora_teleoperate_arm2.yml  main.py
operating_platform/robot/components/camera_opencv/: main.py  pyproject.toml
operating_platform/robot/robots/: camera.py  configs.py  utils.py
operating_platform/robot/robots/aloha_v1_TODO/: dora_zeromq.py  manipulator.py
operating_platform/server/: operating_platform_server_test.py
operating_platform/utils/: camera_display.py  constants.py  data_file.py  dataset.py  logging_utils.py  random_utils.py  train_utils.py  utils.py  video.py  wandb_utils.py
scripts/: cloud_train.py  run_so101.sh  run_so101_cli.sh  run_so101_dora.sh  run_so101_inference.sh  run_so101_replay.sh  run_so101_train.sh  setup_env.sh  test_async_save_e2e.py  validate_dataset_format.py  visual.sh
test/array/: test.py
test/async/: test_async_episode_saver.py
(+10 files in other folders)
